// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert renders correctly 1`] = `
<div>
  <div
    class="alert alert-danger"
    role="alert"
  >
    <span
      class="alert-indicator"
    >
      <svg
        class="lexicon-icon lexicon-icon-exclamation-full"
        role="img"
      >
        <use
          xlink:href="#exclamation-full"
        />
      </svg>
    </span>
    Alert Danger
  </div>
</div>
`;

exports[`Alert renders info alert correctly 1`] = `
<div>
  <div
    class="alert alert-info"
    role="alert"
  >
    <span
      class="alert-indicator"
    >
      <svg
        class="lexicon-icon lexicon-icon-info-circle"
        role="img"
      >
        <use
          xlink:href="#info-circle"
        />
      </svg>
    </span>
    Alert Info
  </div>
</div>
`;

exports[`Alert renders with close button correctly 1`] = `
<div>
  <div
    class="alert alert-warning alert-dismissible"
    role="alert"
  >
    <span
      class="alert-indicator"
    >
      <svg
        class="lexicon-icon lexicon-icon-warning-full"
        role="img"
      >
        <use
          xlink:href="#warning-full"
        />
      </svg>
    </span>
    Alert Warning
    <button
      aria-label="Close"
      class="close"
      type="button"
    >
      <svg
        class="lexicon-icon lexicon-icon-times"
      >
        <use
          xlink:href="#times"
        />
      </svg>
    </button>
  </div>
</div>
`;
